# copolymer-reactivity

./: .gitignore  LICENSE  README.md  doi_extractor.py  extraction.py  json_to_yaml.py  model evaluation.py  model_check.py  pdf2markdown_nougat.ipynb  setup.cfg
.ipynb_checkpoints/: pdf2latex_nougat-checkpoint.ipynb
cache/: cache.db  cache.db-shm  cache.db-wal
copol_prediction/: HT.v_-0.00041.txt  HT.v_-0.00042.txt  HT.v_0.00000.txt  HT.v_0.00022.txt  HT.v_0.00027.txt  HT.v_0.74188.txt  HT.v_3.78727.txt  HT.v_57.93969.txt  all_data_filtered.json  analyze_properties.py  best_ridge_model_r1r2.pkl  best_ridge_model_r1r2_log.pkl  best_ridge_model_r1r2_power.pkl  best_ridge_model_r1r2_sqrt.pkl  binary_classification.py  bucket_model.py  classification_model.ipynb  classification_model.py  collect_extracted_data.py  combine_new_features.py  copol_data_filtered.json  crossref_data_filtered.json  data_processing.py  error_analysis.py  extracted_data_collected_with_logP_and_features.json  gfnff_adjacency  gfnff_charges  gfnff_topo  interactive_predictions_fold_1.html  interactive_predictions_fold_10.html  interactive_predictions_fold_2.html  interactive_predictions_fold_3.html  interactive_predictions_fold_4.html  interactive_predictions_fold_5.html  interactive_predictions_fold_6.html  interactive_predictions_fold_7.html  interactive_predictions_fold_8.html  interactive_predictions_fold_9.html  model.ipynb  model.py  (+22 more)
data_extraction/: error_log.txt  execution_summary.json  extracted_reactions.csv  model_training_stats.json  obtain_data.py  token_stats.json  visualize_data.py
doi_extraction/: doi_extractor.py
dump/: bucket_model.py  calculate_precision.py  clean_json.py  distance_model.py  error_analysis.ipynb  graph_model.py  papers_without_mapping.json  parity_plot.py  permutation_analysis.py  prediction_old.py  regression_model.ipynb
legacy/: Extraction with different models.csv  PDF_download.py  enhanced_doi_list.json  extraction.py  extraction_with_GPTVision.py  extraction_with_claude.py  extraction_with_pdf.py  figures.ipynb  json_to_yaml.py  mindee_PDF_to_json.py  model evaluation.py  model_check.py  model_evaluation.py  precision_prediction_randomforest.py  temp.json  test_data.json
markdown_output/: papaer5.mmd  paper1-smalllmodel.mmd  paper1.mmd  paper2.mmd  paper3.mmd  paper3out.mmd  paper4.mmd  paper5.mmd
model_output/: output_data1.json  output_data1.yaml  output_data2.json  output_data2.yaml  output_data3.json  (+5 more)
(+12270 files in other folders)
