##########################
# Setup.py Configuration #
##########################
[metadata]
name = copolextractor
version = 0.0.1-dev
description = Extract polymer reactivity data
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/marawilhelmi/polymer-reactivity
download_url = https://github.com/marawilhelmi/polymer-reactivity/releases
project_urls =
    Bug Tracker = https://github.com/marawilhelmi/polymer-reactivity/issues
    Source Code = https://github.com/marawilhelmi/polymer-reactivity

# Author information
author = Mara Schilling-Wilhelmi
author_email = mara.Wilhelmi@uni-jena.de
maintainer = Mara Schilling-Wilhelmi, Kevin Maik Jablonka
maintainer_email = mara.Wilhelmi@uni-jena.de, mail@kjablonka.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)
keywords =
    llm
    chemistry
    benchmark

[options]
install_requires =
    openai
    PyYAML
    pubchempy
    backoff
    rdkit
    diskcache
    thefuzz
    scikit-learn
    anthropic
    pytesseract
    pint

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    furo
    sphinx-autodoc-typehints
    sphinx_automodapi
    sphinx_copybutton



[tool.ruff]
exclude =
    ".tox"
    ".git"
    "__pycache__"
    "docs/source/conf.py"
    "build"
    "dist"
    "tests/fixtures/*"
    "*.pyc"
    "*.egg-info"
    ".cache"
    ".eggs"
    "data"
line-length = 120
select =
    "C9"
    "E"
    "F"
    "W"

[tool.ruff.mccabe]
max-complexity = 20
